--- a/client/app/src/main/res/layout/activity_read_note.xml
+++ b/client/app/src/main/res/layout/activity_read_note.xml
@@ -78,18 +78,22 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|left"
-        android:orientation="horizontal">
+        android:layout_gravity="top|right"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginTop="80dp"
+        android:layout_marginRight="12dp">
 
         <Button
             android:id="@+id/info_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@drawable/info"/>
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/info"
+            android:layout_marginBottom="16dp"/>
         <Button
             android:id="@+id/button_qr_show"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="38dp"
+            android:layout_height="40dp"
             android:background="@drawable/ic_qr"
             tools:ignore="SpeakableTextPresentCheck"  />
     </LinearLayout>
@@ -107,7 +111,10 @@
         android:id="@+id/memo_vcs"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_gravity="center"
+        android:layout_gravity="bottom|right"
+        android:dividerHeight="2dp"
+        android:divider="#E2E2E2"
         android:visibility="invisible"
-        android:background="#bcf0ff"/>
+        android:background="#17D7A0"
+        android:paddingHorizontal="20dp"/>
 </FrameLayout>
