--- a/client/app/src/main/res/layout/vcs_layout.xml
+++ b/client/app/src/main/res/layout/vcs_layout.xml
@@ -5,14 +5,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="30px">
 
         <TextView
             android:id="@+id/writer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:height="160px"
             android:textSize="20dp"
             android:gravity="center_vertical"
@@ -22,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:height="160px"
             android:textSize="20dp"
             android:gravity="center_vertical|right"
